--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,7 @@
 name: Deploy to AWS ECS
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   build-and-deploy:
     runs-on: [ ubuntu-latest ]
