--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,9 @@ jobs:
           java-version: '17'
 
       - name: Build Project
-        run: mvn clean install -DskipTests
+        run: |
+          cd order-service/orderservice
+          mvn clean install -DskipTests
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
