--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,6 +46,10 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
+          echo "ECR_REGISTRY: $ECR_REGISTRY"
+          echo "REPOSITORY: $REPOSITORY"
+          echo "IMAGE_TAG: $IMAGE_TAG"
+      
           cd orderservice
           docker build -t $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG
