--- a/orderservice/Dockerfile
+++ b/orderservice/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-COPY target/orderservice-0.0.1-SNAPSHOT.jar orderservice.jar
+COPY target/orderservice-0.0.1-SNAPSHOT.jar orderservice-0.0.1-SNAPSHOT.jar
 EXPOSE 8080
 CMD ["java","-jar","orderservice.jar"]
