--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 spring.application.name=orderservice
 
 # Using environment variables
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+
+spring.datasource.url=jdbc:postgresql:user-management.cn4a2uuwcav1.us-west-2.rds.amazonaws.com:5432/user-management
+spring.datasource.username=root
+spring.datasource.password=AWS_apple100
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Secret - Can also be stored as an environment variable for security
-jwt.secret=${JWT_SECRET}
+jwt.secret=abcd1234
